# SVG-BBOX

./: .gitignore  .npmignore  .npmrc  .prettierignore  .puppeteerrc.cjs  API.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPING.md  INSTALL.md  NPM-PUBLISH-CHECKLIST.md  PIPELINE.md  README.md  SECURITY.md  SvgVisualBBox.cjs  SvgVisualBBox.js  SvgVisualBBox.min.js  TESTING-SETUP-SUMMARY.md  browser-utils.cjs  build.js  cliff.toml  eslint.config.js  export-svg-objects.cjs  fix_svg_viewbox.js  getbbox.cjs  package.json  playwright.config.js  pnpm-lock.yaml  render_svg_chrome.cjs  render_svg_chrome.js  sbb-chrome-extract.cjs  sbb-chrome-getbbox.cjs  sbb-compare.cjs  sbb-comparer.cjs  sbb-export.cjs  sbb-extract.cjs  sbb-extractor.cjs  sbb-fix-viewbox.cjs  (+18 more)
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
assets/: svg-bbox_logo_txt.txt
config/: release_conf.yml  timeouts.cjs  timeouts.js
examples/: bbox-comparison.js  get_bboxes_for_text2path.cjs  local-vs-global-coordinates.cjs
lib/: fbf.cjs  (+7 more)
scripts/release/: .gitignore  pyproject.toml
scripts/release/ci/: __init__.py
scripts/release/release/: __init__.py  __main__.py  cli.py  discovery.py  exceptions.py  workflow.py
scripts/release/release/ci/: __init__.py  monitor.py
scripts/release/release/config/: __init__.py  defaults.py  loader.py  models.py
scripts/release/release/ecosystems/: __init__.py  base.py  go.py  nodejs.py  python.py  rust.py
scripts/release/release/git/: __init__.py  operations.py  queries.py
scripts/release/release/publishers/: __init__.py  base.py  crates.py  docker.py  github.py  go.py  homebrew.py  npm.py  pypi.py
scripts/release/release/task_runners/: __init__.py
scripts/release/release/utils/: __init__.py  shell.py  version.py
scripts/release/release/validators/: __init__.py  base.py  ci.py  dependencies.py  git.py  quality.py  security.py  version.py
scripts/release/tests/: __init__.py  conftest.py  test_discovery.py
scripts/release/tests/test_config/: __init__.py  test_defaults.py  test_loader.py  test_models.py
scripts/release/tests/test_ecosystems/: __init__.py  test_nodejs.py  test_python.py  test_rust.py
scripts/release/tests/test_publishers/: __init__.py  test_base.py  test_github.py  test_npm.py
scripts/release/tests/test_validators/: __init__.py  test_git.py  test_security.py  test_version.py
(+66 files in other folders)
